--- a/KeyLibrary/src/main/res/layout/item_custom_edit.xml
+++ b/KeyLibrary/src/main/res/layout/item_custom_edit.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
     android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -16,6 +16,8 @@
             android:layout_marginLeft="5dp"
             android:id="@+id/custom_remind"
             android:textSize="16sp"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:textColor="@color/gray"
             android:layout_width="wrap_content"
             android:layout_height="25dp" />
@@ -32,9 +34,6 @@
                 android:textSize="20sp"
                 android:inputType="text"
                 android:paddingRight="25dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:enabled="true"
                 android:windowSoftInputMode="adjustPan"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
@@ -58,6 +57,8 @@
         android:id="@+id/cant_clickable"
         android:layout_width="match_parent"
         android:layout_height="75dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:background="@color/trans_color"
         android:orientation="vertical">
     </LinearLayout>
