--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -20,6 +20,7 @@
             android:id="@+id/net"
             android:layout_width="match_parent"
             android:fillViewport="true"
+            android:paddingBottom="@dimen/dp_56"
             android:layout_height="match_parent">
 
 
@@ -128,8 +129,8 @@
                         android:id="@+id/like"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:layout_width="@dimen/dp_30"
-                        android:layout_height="@dimen/dp_30"/>
+                        android:layout_width="@dimen/dp_25"
+                        android:layout_height="@dimen/dp_25"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -166,17 +167,36 @@
 
 
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:visibility="gone"
-                    android:id="@+id/list"
-                    android:layout_margin="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/last_update_info_time"
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:background="@drawable/shape_white_bg_alpha"
                     android:layout_width="match_parent"
-                    app:layout_constraintHorizontal_bias="1"
-                    android:layout_height="0dp"/>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dp_13"
+                    android:padding="@dimen/dp_13"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/more_book"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:text="更多"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/more_list"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:paddingTop="@dimen/dp_5"
+                        app:layout_constraintTop_toBottomOf="@+id/more_book"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -188,11 +208,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/shape_white_bg_alpha"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/dp_56">
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/cache"
             android:layout_width="0dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/read"
@@ -218,6 +240,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/read"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/cache"
             app:layout_constraintRight_toLeftOf="@+id/add"
             app:layout_constraintHorizontal_bias="1"
@@ -255,6 +278,7 @@
             android:layout_width="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/read"
             app:layout_constraintHorizontal_bias="1"
             android:orientation="vertical"
@@ -272,7 +296,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:layout_height="wrap_content"
-                android:text="加书架"/>
+                android:text="加入书架"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
