--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -13,9 +13,10 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/toolbar"
         app:title="Read"
+        app:titleTextColor="@color/white"
         android:background="@color/read_bg"
         android:minHeight="?attr/actionBarSize"
-        app:navigationIcon="@mipmap/back_black"
+        app:navigationIcon="@mipmap/back_white"
         android:layout_width="match_parent"
         android:visibility="invisible"
         android:layout_height="wrap_content" />
@@ -27,7 +28,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
-        android:src="@mipmap/day"
+        android:src="@mipmap/day_white"
         app:borderWidth="0dp"
         android:backgroundTint="@color/read_bg"
         android:layout_width="wrap_content"
@@ -40,7 +41,7 @@
         android:background="@drawable/shape_read_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_120">
+        android:layout_height="@dimen/dp_150">
 
         <LinearLayout
             android:id="@+id/chapter_setting"
@@ -48,7 +49,7 @@
             app:layout_constraintBottom_toTopOf="@+id/read_setting"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
+            android:layout_height="@dimen/dp_90"
             android:orientation="horizontal">
 
             <TextView
@@ -57,19 +58,47 @@
                 android:id="@+id/pre_chapter"
                 android:text="上一章"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-
-            <View
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:textColor="@color/white"
+                    android:id="@+id/chapter_name_text"
+                    android:layout_height="wrap_content"/>
+                <androidx.appcompat.widget.AppCompatSeekBar
+                    android:layout_marginTop="@dimen/dp_2"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/seekBar_chapter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:progressDrawable="@drawable/seekbar_drawable"
+                    android:thumb="@drawable/seekbar_thumb"/>
+
+
+
+            </LinearLayout>
+
+
+
+
 
 
             <TextView
+                android:id="@+id/next_chapter"
                 android:layout_marginTop="@dimen/dp_10"
                 android:padding="@dimen/dp_10"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:text="下一章"
                 android:gravity="center"
@@ -92,18 +121,19 @@
                 android:layout_height="match_parent" >
 
                 <ImageView
-                    android:src="@mipmap/menu"
+                    android:src="@mipmap/menu_white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
 
                 <TextView
                     android:text="目录"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/read_down"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -132,18 +162,19 @@
                 android:layout_height="match_parent" >
 
                 <ImageView
-                    android:src="@mipmap/aa"
+                    android:src="@mipmap/aa_white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
 
                 <TextView
                     android:text="设置"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/read_hear"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -152,14 +183,14 @@
                 android:layout_height="match_parent" >
 
                 <ImageView
-                    android:src="@mipmap/headset"
+                    android:src="@mipmap/headset_white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
 
                 <TextView
                     android:text="听书"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
