--- a/app/src/main/res/layout/dialog_setting.xml
+++ b/app/src/main/res/layout/dialog_setting.xml
@@ -17,14 +17,14 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:src="@mipmap/aa"
+            android:src="@mipmap/aa_white"
             android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatSeekBar
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/seekBar_font"
             android:layout_width="0dp"
-            android:min="20"
-            android:max="50"
+            android:min="50"
+            android:max="90"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:progressDrawable="@drawable/seekbar_drawable"
@@ -44,7 +44,7 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:src="@mipmap/day"
+            android:src="@mipmap/day_white"
             android:layout_height="wrap_content"/>
         <androidx.appcompat.widget.AppCompatSeekBar
             app:layout_constraintTop_toTopOf="parent"
@@ -85,6 +85,7 @@
                 android:id="@+id/bg_default"
                 android:src="@color/read_bg_default"
                 android:layout_width="0dp"
+                app:border_color="@color/white"
                 android:layout_height="@dimen/dp_45"
                 android:layout_weight="1"/>
 
@@ -92,6 +93,7 @@
                 android:id="@+id/bg_1"
                 android:src="@color/read_bg_1"
                 android:layout_width="0dp"
+                app:border_color="@color/white"
                 android:layout_height="@dimen/dp_45"
                 android:layout_weight="1"/>
 
@@ -100,6 +102,7 @@
                 android:id="@+id/bg_2"
                 android:src="@color/read_bg_2"
                 android:layout_width="0dp"
+                app:border_color="@color/white"
                 android:layout_height="@dimen/dp_45"
                 android:layout_weight="1"/>
 
@@ -107,7 +110,9 @@
             <com.key.keylibrary.widget.CircleImageView
                 android:id="@+id/bg_3"
                 android:src="@color/read_bg_3"
+                app:border_color="@color/white"
                 android:layout_width="0dp"
+
                 android:layout_height="@dimen/dp_45"
                 android:layout_weight="1"/>
 
@@ -115,6 +120,7 @@
                 android:id="@+id/bg_4"
                 android:src="@color/read_bg_4"
                 android:layout_width="0dp"
+                app:border_color="@color/white"
                 android:layout_height="@dimen/dp_45"
                 android:layout_weight="1"/>
 
@@ -138,7 +144,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="翻页模式"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -152,6 +158,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="仿真翻页"
+            android:textColor="@color/white"
             android:textSize="18sp"/>
 
 
@@ -172,7 +179,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="字体"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -185,6 +192,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="系统默认"
             android:textSize="18sp"/>
 
@@ -194,6 +202,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="@dimen/dp_13"
+        android:visibility="gone"
         android:id="@+id/font_sample"
         app:layout_constraintTop_toBottomOf="@id/font_type"
         android:layout_width="match_parent"
