--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,6 @@
     <dimen name="reading_max_text_size">30sp</dimen>
     <!-- 设置行高 -->
     <dimen name="setting_height">60dp</dimen>
+
+    <dimen name="bottom_tab">56dp</dimen>
 </resources>
